guestbook/guestbook-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: guestbook  
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certResolver: le
    link.argocd.argoproj.io/external-link: https://guestbook.app.atwiss.com/
spec:
  tls: 
    - hosts:
      - guestbook.app.atwiss.com
  rules:
    - host: guestbook.app.atwiss.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guestbook-ui
                port:
                  number: 80
